--- a/Problems/220522 BOJ 6603 Lotto.md
+++ b/Problems/220522 BOJ 6603 Lotto.md
@@ -1,37 +1,41 @@
-# 220515 PRG Furthest Node
+# 220522 BOJ 6603 Lotto
 
-링크 : https://programmers.co.kr/learn/courses/30/lessons/49189
+링크 : https://www.acmicpc.net/problem/6603
 
-제목 : 가장 먼 노드
+제목 : 로또
 
-유형 : 그래프
+유형 : 백트래킹
 
 ---
 
 ```python
-from collections import deque
+import sys
+input = sys.stdin.readline
 
-def solution(n, edge):
-    answer = 0
-    nodes = [[] for _ in range(n)]
-    for e in edge:
-        nodes[e[0]-1].append(e[1]-1)
-        nodes[e[1]-1].append(e[0]-1)
-    visited = [False]*n
-    max_distance = 0
-    queue = deque([[0, 0]])
-    while queue:
-        node, distance = queue.popleft()
-        if visited[node]:
-            continue
-        visited[node] = True
-        if distance == max_distance:
-            answer += 1
+def main():
+    def backtracking(res, start):
+        res.append(ks[start])
+        if len(res) == 6:
+            print(' '.join(res))
         else:
-            max_distance += 1
-            answer = 1
-        for next_node in nodes[node]:
-            queue.append([next_node, distance+1])
-    return answer
+            for i in range(start+1,len(ks)):
+                backtracking(res, i)
+                res.pop()
+
+    while True:
+        ks = list(input().split())
+        k = ks[0]
+        if k == '0':
+            break
+        
+        for i in range(1,len(ks)):
+            backtracking([],i)
+        
+        print()
+        
+if __name__ == "__main__":
+    I = sys.stdin.readline
+    main()
 ```
 
+`68ms` `Python 3`
