--- a/Problems/221012 PRG 42891 (Heap, Math).md
+++ b/Problems/221012 PRG 42891 (Heap, Math).md
@@ -1,4 +1,4 @@
-# 221012 PRG 42891 (Heap)
+# 221012 PRG 42891 (Heap, Math)
 
 링크 : https://school.programmers.co.kr/learn/courses/30/lessons/42891
 
@@ -16,7 +16,7 @@ def solution(food_times, k):
     from_food = [i-1 for i in range(len(food_times))]
     next_food[-1] = 0
     from_food[0] = len(food_times)-1
-    
+
     i = 0
     while k:
         food_times[i] -= 1
@@ -27,7 +27,7 @@ def solution(food_times, k):
         k -= 1
         if not food_times[i]:
             return -1
-        
+
     answer = i+1
     return answer
 ```
@@ -36,7 +36,7 @@ def solution(food_times, k):
 
 
 
-효율성 테스트를 통과하기 위해선 Heap을 사용해야 한다.
+효율성 테스트를 통과하기 위해선 Heap을 사용하고, 접근 방식을 기존과는 다르게 "계산하는 방식"으로 접근해야 한다
 
 ```python
 import heapq
@@ -46,7 +46,7 @@ def solution(food_times, k):
     heapq.heapify(heap)
     popped = []
     eaten = 0
-    
+
     while heap:
         if k >= (heap[0][0]-eaten) * len(heap):
             k -= (heap[0][0]-eaten) * len(heap)
